fixed spacing

--- a/style.css
+++ b/style.css
@@ -88,7 +88,6 @@ body {
 
 div.front-page-container {
   position: relative;
-  top: 12px;
 }
 
 h1, h2, h3, h4, h5, h6 {
